--- a/raw_pose_processing.ipynb
+++ b/raw_pose_processing.ipynb
@@ -105,11 +105,11 @@
    "source": [
     "from human_body_prior.body_model.body_model import BodyModel\n",
     "\n",
-    "male_bm_path = './body_models/smplh/male/model.npz'\n",
-    "male_dmpl_path = './body_models/dmpls/male/model.npz'\n",
+    "male_bm_path = 'body_model/smplh/male/model.npz'\n",
+    "male_dmpl_path = 'body_model/dmpls/male/model.npz'\n",
     "\n",
-    "female_bm_path = './body_models/smplh/female/model.npz'\n",
-    "female_dmpl_path = './body_models/dmpls/female/model.npz'\n",
+    "female_bm_path = 'body_model/smplh/female/model.npz'\n",
+    "female_dmpl_path = 'body_model/dmpls/female/model.npz'\n",
     "\n",
     "num_betas = 10 # number of body parameters\n",
     "num_dmpls = 8 # number of DMPL parameters\n",
