--- a/notebook/raw_pose_processing.ipynb
+++ b/notebook/raw_pose_processing.ipynb
@@ -114,10 +114,10 @@
     "num_betas = 10 # number of body parameters\n",
     "num_dmpls = 8 # number of DMPL parameters\n",
     "\n",
-    "male_bm = BodyModel(bm_fname=male_bm_path, num_betas=num_betas, num_dmpls=num_dmpls, dmpl_fname=male_dmpl_path).to(comp_device)\n",
+    "male_bm = BodyModel(smpl_file_path=male_bm_path, num_betas=num_betas, num_dmpls=num_dmpls, dmpl_file_path=male_dmpl_path).to(comp_device)\n",
     "faces = c2c(male_bm.f)\n",
     "\n",
-    "female_bm = BodyModel(bm_fname=female_bm_path, num_betas=num_betas, num_dmpls=num_dmpls, dmpl_fname=female_dmpl_path).to(comp_device)"
+    "female_bm = BodyModel(smpl_file_path=female_bm_path, num_betas=num_betas, num_dmpls=num_dmpls, dmpl_file_path=female_dmpl_path).to(comp_device)"
    ]
   },
   {
